--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -123,3 +123,78 @@ body {
     background: var(--btn-color);
     color: #ffffff;
 }
+
+/* ==================================HERO================================== */
+.hero-section {
+    padding: 76px 0 110px 0;
+    align-items: center;
+    background: #a8bacd;
+}
+
+.hero-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.hero-text {
+    max-width: 44%;
+}
+
+.hero-text .title {
+    color: #fff;
+    font-size: 7rem;
+    font-weight: 600;
+    line-height: 1.14; /* 114.286% */
+    letter-spacing: -1.4px;
+}
+
+.hero-text .desc {
+    margin-top: 22px;
+    color: #003b6f;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.67; /* 166.667% */
+}
+
+.hero-text .cta-group {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+    gap: 38px;
+}
+
+.hero-text .cta-group .hero-button:hover {
+    background: var(--btn-color);
+    color: #ffffff;
+}
+
+.hero-text .cta-group .call-number {
+    color: #fff;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67; /* 166.667% */
+}
+
+.images-container {
+    margin-left: 113px;
+    display: flex;
+    gap: 24px;
+    position: relative;
+}
+
+.images-container .large-img {
+    width: 330px;
+    height: 540px;
+    border-radius: 6px;
+    z-index: 1;
+}
+
+.images-container .small-img {
+    width: 210px;
+    height: 410px;
+    border-radius: 0 6px 6px 0;
+    position: absolute;
+    top: 65px;
+    right: -204px;
+}
