--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,7 +364,7 @@ body {
     line-height: 1.75; /* 175% */
 }
 
-.more-group .more-item .item-cta {
+.item-cta {
     display: inline-block;
     margin-top: 18px;
     text-decoration: none;
@@ -374,7 +374,7 @@ body {
     line-height: 1.75; /* 175% */
 }
 
-.more-group .more-item .item-cta:hover {
+.item-cta:hover {
     color: var(--btn-color);
     font-weight: 400;
 }
@@ -525,15 +525,15 @@ body {
     line-height: 1.85; /* 185.714% */
 }
 
-.member .control-wrapper {
+.control-wrapper {
     margin-top: 38px;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 18px;
 }
 
-.member .control-wrapper .left-button,
-.member .control-wrapper .right-button {
+.control-wrapper .left-button,
+.control-wrapper .right-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -544,15 +544,15 @@ body {
     transition: background 0.2s ease, border 0.2s ease;
 }
 
-.member .control-wrapper .left-button:hover,
-.member .control-wrapper .right-button:hover {
+.control-wrapper .left-button:hover,
+.control-wrapper .right-button:hover {
     background: var(--btn-color);
     border: none;
     cursor: pointer;
 }
 
-.member .control-wrapper .left-button:hover svg path,
-.member .control-wrapper .right-button:hover svg path {
+.control-wrapper .left-button:hover svg path,
+.control-wrapper .right-button:hover svg path {
     stroke: #fff;
 }
 
@@ -604,4 +604,109 @@ body {
 .mobile-wrapper .cta-download .google-play:hover {
     opacity: 0.8;
     cursor: pointer;
+}
+
+/* ==================================NEWS================================== */
+.news {
+    margin-top: 85px;
+    padding: 85px 0;
+    background: #fff5f5;
+}
+
+.news-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.news-cta {
+    padding: 68px 0;
+}
+
+.news-cta .title {
+    width: 470px;
+    color: #10375c;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+.news-cta .desc {
+    display: inline-block;
+    padding: 28px 0;
+    text-decoration: none;
+    color: #10375c;
+    font-family: "Inter", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.news-cta .desc:hover {
+    text-decoration: underline;
+}
+
+.news-cta .control-wrapper {
+    justify-content: flex-start;
+    margin-top: 0;
+}
+
+.news-list {
+    margin-left: 130px;
+    display: flex;
+    gap: 30px;
+}
+
+.news-list .news-item {
+    width: 270px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.news-list .news-item:hover .blog-info {
+    box-shadow: 0 18px 50px 0 rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    border: none;
+}
+
+.news-list .news-item .news-image {
+    display: block;
+    width: 100%;
+    height: 172px;
+    object-fit: cover;
+    margin-left: -1px;
+    transition: 0.25s ease;
+}
+
+.news-list .news-item:hover .news-image {
+    transform: scale(1.1);
+}
+
+.news-list .news-item .blog-info {
+    border: 1px solid #e8ebee;
+    border-top: none;
+    border-radius: 0 0 12px 12px;
+    padding: 18px 22px 22px 22px;
+}
+
+.news-item .blog-info .title {
+    color: #10375c;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.62; /* 162.5% */
+}
+
+.news-item .blog-info .desc {
+    margin-top: 10px;
+    color: #575f66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.71; /* 171.429% */
+}
+
+.news-item .blog-info .news-link {
+    margin-top: 12px;
+    color: #10375c;
+}
+
+.news-item .blog-info .news-link:hover {
+    color: var(--btn-color);
 }
